chore(resources): 移动 SQLite 到 src-tauri/database 以满足打包资源路径要求

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "web:dev": "nuxt dev",
     "web:generate": "nuxt generate",
     "web:preview": "nuxt preview",
-    "dev": "tauri dev",
+    "dev": "nuxt prepare && tauri dev",
     "build": "tauri build",
     "postinstall": "nuxt prepare",
     "portable": "node scripts/portable.mjs"
