--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -45,9 +45,17 @@ dirs = "6.0.0"
 whoami = "1.6.0"
 machine-uid = "0.5.3"
 rodio = { version = "0.18.1", features = ["flac", "mp3", "vorbis"] }
+winreg = { version = "0.12.0" }
+regex = "1.11.1"
+reqwest = { version = "0.12.9", features = ["json", "gzip"] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2.3.0"
 tauri-plugin-single-instance = "2.3.4"
 tauri-plugin-window-state = "2.4.0"
+
+[profile.release]
+# 关闭调试符号以避免在 Windows 上链接 PDB 导致的 mspdbcore.dll 相关问题
+debug = 0
 
